2009-10-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libchip/ide/ata.c: Use simple vectored CPU macro to select interrupt
	model.

2009-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/serial/z85c30.c, libchip/serial/ns16550.c,
	libchip/serial/mc68681.c: Reflect termios_baud_to_number having been
	renamed to rtems_termios_baud_to_number.

2009-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/serial/sersupp.h: Remove termios_baud_to_index,
	termios_baud_to_number (duplicate prototypes).
	Add C++-guards.
	Include rtems/termiostypes.h.

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/bsp-configure.m4: Add RTEMS_BSP_BOOTCARD_OPTIONS.

2009-08-20	Joel Sherrill <joel.sherrill@OARcorp.com>

	* aclocal/check-networking.m4: Disable TCP/IP on targets without enough
	physical address to support BSD TCP/IP stack.

2009-08-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libchip/network/elnk.c: Convert calls to legacy routine
	rtems_clock_get( RTEMS_CLOCK_GET_xxx, ..) to rtems_clock_get_xxx().

2009-08-03	Roger Dahlkvist <ruppe@kth.se>

	* libchip/shmdr/shm_driver.h: nios2 was not accounted for.

2009-07-22	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libchip/ide/ata.c: Remove warning.

2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* aclocal/bsp-bootcard-options.m4: Rename BSP_BOOTCARD_OPTIONS to
	RTEMS_BSP_BOOTCARD_OPTIONS. Add RTEMS_BSP_CLEANUP_OPTIONS so all BSPs
	now use the same macros.
	* aclocal/bsp-bspcleanup-options.m4: New file.

2009-07-15	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libchip/serial/ns16550.c, libchip/serial/ns16550_p.h: Removed
	obsolete defines and declarations.  Set initial baud during device
	open.  Fixed interrupt mode.

2009-06-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libchip/i2c/spi-sd-card.c, libchip/ide/ata.c: Eliminate using the
	GNU/Linux specific error numbers EBADRQC and ENOTBLK. Switch to
	EINVAL and ENOTTY as appropriate.

2009-05-30	Chris Johns <chrisj@rtems.org>
